API changes and scrollbars fix

--- a/apps/elevaite/app/(engineer)/workbench/page.scss
+++ b/apps/elevaite/app/(engineer)/workbench/page.scss
@@ -46,6 +46,12 @@
 
 
 .react-tabs {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  overflow: auto;
+  @include scrollbar();
+
   -webkit-tap-highlight-color: transparent;
   
   background: url("/images/background-application-dark.png");
@@ -53,7 +59,6 @@
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: 700px auto;
-  min-height: 100%;
 }
 
 .react-tabs__tab-list {
@@ -63,7 +68,7 @@
   flex-direction: row;
   align-items: center;
   position: sticky;
-  top: var(--navbar-height);
+  // top: var(--navbar-height);
   /* vertical-align: middle; */
   background: var(--ev-colors-background);
   // width: 100%;
