--- a/apps/elevaite/app/(user)/(homepage)/page.scss
+++ b/apps/elevaite/app/(user)/(homepage)/page.scss
@@ -1,13 +1,15 @@
 
 
 .card-holders-container {
-  min-height: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 32px;
   padding: 32px;
   overflow: auto;
+
+  @include scrollbar();
 
   background: url("/images/background-application-light.png"), linear-gradient(to right,  var(--ev-colors-primary),  var(--ev-colors-primary));
   background-position: right -50px bottom -200px, top;
