--- a/apps/elevaite/app/ui/AppLayout.scss
+++ b/apps/elevaite/app/ui/AppLayout.scss
@@ -21,6 +21,7 @@
 
         & > div {
             min-height: 0;
+            height: 100%;
         }
     }
 }
